2. add img batman-superman.jpeg

--- a/tag-immagini.html
+++ b/tag-immagini.html
@@ -4,7 +4,7 @@ tag-immagini.html
 
     <body>
         <!-- tag minimo -->
-        <img srcset="/Users/otmanekhaddadi/Desktop"/>
+        <img src="batman-superman.jpeg"/>
         
         <!-- tag con attributo alt -->
         <img src="batman-superman.jpeg" alt="Una coppia imbattibile: Batman e Superman!"/>
