4. add ricetta.html

--- a/tag-immagini.html
+++ b/tag-immagini.html
@@ -1,4 +1,9 @@
-<title>tag-immagini</title>
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8"/>
+    <title>Tag immagini</title>
+</head>
 
 <html>
 
