--- a/tag-video-audio.html
+++ b/tag-video-audio.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8"/>
+    <title>Tag Video e Audio</title>
+</head>
+
 <html>
     <body>
         <!-- Video tag -->
