5. add presentazione ricetta.html

--- a/ricetta.html
+++ b/ricetta.html
@@ -12,8 +12,12 @@
      <body>
 
         <h1>Sbrisolona alle albicocche</h1>
+        <h2>Presentazione</h2>
+        <p>La torta sbrisolona è un dolce a base di mandorle tipico lombardo, vanto della città di Mantova: è una torta dura, friabile e dal sapore ricco che viene realizzata e servita proprio a pezzi grossolani. Da qui il nome sbrisolona, da "sbrisa" ovvero briciola. Il maestro Iginio Massari ha messo per noi le mani in pasta mostrandoci quanto è semplice preparare questo dolce di origini contadine, oggi molto apprezzato anche all'estero, tanto da essere patrimonio culinario italiano. Scoprite altri sapori della città di Mantova realizzando anche un altro famoso dolce di questa città: la torta Elvezia.
+            Se ami questo genere di dolci, puoi realizzare tante torte sbriciolate, tra cui quella alla crema, alla ricotta o quella alla Nutella!
+            </p>
         <h2>INGREDIENTI</h2>
-        <h5>INGREDIENTI PER UNO STAMPO DA 24 CM</h5>
+        <h4>INGREDIENTI PER UNO STAMPO DA 24 CM</h4>
         
         <ul>
             <li>Farina 00 180g</li>
