--- a/ricetta.html
+++ b/ricetta.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Ricetta Sbrisolona</title>
+        <title>Ricetta Torta Sbrisolona</title>
 
      </head>
 
@@ -16,29 +16,25 @@
         <p>La torta sbrisolona è un dolce a base di mandorle tipico lombardo, vanto della città di Mantova: è una torta dura, friabile e dal sapore ricco che viene realizzata e servita proprio a pezzi grossolani. Da qui il nome sbrisolona, da "sbrisa" ovvero briciola. Il maestro Iginio Massari ha messo per noi le mani in pasta mostrandoci quanto è semplice preparare questo dolce di origini contadine, oggi molto apprezzato anche all'estero, tanto da essere patrimonio culinario italiano. Scoprite altri sapori della città di Mantova realizzando anche un altro famoso dolce di questa città: la torta Elvezia.
             Se ami questo genere di dolci, puoi realizzare tante torte sbriciolate, tra cui quella alla crema, alla ricotta o quella alla Nutella!
             </p>
-        <h2>INGREDIENTI</h2>
+        <hr>
+        <h3>INGREDIENTI</h3>
         <h4>INGREDIENTI PER UNO STAMPO DA 24 CM</h4>
         
         <ul>
-            <li>Farina 00 180g</li>
+            <li>Farina 00 180g</li> 
             <li>Mandorle grezze 150g</li>
             <li>Zucchero 150g</li>
             <li>Scorza di limone 1</li>
             <li>Tuorli(circa 2) 40g</li>
             <li>Strutto 80g</li>
-        </ul>
-
-        <ol>
             <li>Farina di mais 110g</li>
             <li>Sale fino 10g</li>
             <li>Baccello di vaniglia 1</li>
             <li>Albicocche semicandite 200g</li>
             <li>Burrro 80g</li>
-        </ol>
+            
+        </ul>
 
      </body>
-
-
-
 
 </html>
